<?xml version="1.0"?>
<package format="2">
  <name>ins_driver</name>
  <version>0.0.0</version>
  <description>The ins_driver_msgs package</description>

  <maintainer email="70205554@qq.com">liwei</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
